--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 			text-align: center;
 		}
 		.video {
+			height: 124px;
+			line-height: 124px;
+		}
+		.thermometer, .order, .social {
 			height: 40px;
 			line-height: 40px;
 		}
@@ -40,7 +44,7 @@
 		</div>
 		<div class="row heading">
 			<div class="span12">
-				<h1>Bitstarter title</h1>
+				<h1>Bitstarter Title</h1>
 			</div>
 		</div>
 		<div class="row subheading">
